Ensure preceding up/down arrow for collapse/expand link does not get orphaned from the associated text

--- a/assets/admin.css
+++ b/assets/admin.css
@@ -5,6 +5,10 @@
 .c2c_edrc {
 	display: block;
 }
+.c2c_edrc_less,
+.c2c_edrc_more {
+	display: inline-block;
+}
 .c2c-edrc-hidden,
 .c2c_edrc_all {
 	display: none;
